css/style.css
html {
  font-size: 10px;
}

#wrapper {
  width: 96rem;
  margin: auto;
}

#control {
  text-align: center;
  background: silver;
  font-size: 1.6rem;
}

.control__button {
  border: none;
  background-color: transparent;
  cursor: pointer;
  color: navy;
  text-decoration: underline;
  font-size: 1.6rem;
}

#main {
  display: flex;
  margin-top: 1.5rem;
}

#suras {
  top: 1.5rem;
  width: 20rem;
  height: 43rem;
  overflow: auto;
}
#suras .active {
  background: navy;
  color: white;
}
#suras .active a {
  color: white;
}

.suras__table {
  font-size: 1.6rem;
}

.suras__table th,
.suras__table td {
  text-align: center;
}

#page {
  position: relative;
  height: 43rem;
  width: 29rem;
  margin-right: 2rem;
}
#page a:hover div {
  background: yellow;
  opacity: 0.2;
  filter: alpha(opacity=25);
}
#page a.active div {
  background: blue;
  opacity: 0.2;
  filter: alpha(opacity=25);
}
#page div {
  position: absolute;
}

#tafseer {
  height: 43rem;
  width: 29rem;
  background: #f8f8f8;
  overflow: auto;
  margin-right: 1rem;
  font-size: 1.6rem;
}

